--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -206,43 +206,19 @@
        "      <th>GPOS_PARENT</th>\n",
        "      <th>Y</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>INDEX</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Brasília</td>\n",
        "      <td>Brasília</td>\n",
        "      <td>PROP</td>\n",
        "      <td>F|S</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>ADVL</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -258,15 +234,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Pesquisa_Datafolha</td>\n",
        "      <td>Pesquisa_Datafolha</td>\n",
        "      <td>N</td>\n",
        "      <td>F|S</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>SUBJ</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -282,15 +258,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>publicada</td>\n",
        "      <td>publicar</td>\n",
        "      <td>V-PCP</td>\n",
        "      <td>F|S</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>N&lt;</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -306,15 +282,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>hoje</td>\n",
        "      <td>hoje</td>\n",
        "      <td>ADV</td>\n",
        "      <td>-</td>\n",
-       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>ADVL</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -330,15 +306,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>revela</td>\n",
        "      <td>revelar</td>\n",
        "      <td>V-FIN</td>\n",
        "      <td>PR|3S|IND</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>STA</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -358,34 +334,31 @@
        "</div>"
       ],
       "text/plain": [
-       "       ID  S  P  P_S                FORM               LEMMA   GPOS  \\\n",
-       "INDEX                                                                 \n",
-       "0       1  1  1    0            Brasília            Brasília   PROP   \n",
-       "1       2  1  1    0  Pesquisa_Datafolha  Pesquisa_Datafolha      N   \n",
-       "2       3  1  1    0           publicada            publicar  V-PCP   \n",
-       "3       4  1  1    0                hoje                hoje    ADV   \n",
-       "4       5  1  1    0              revela             revelar  V-FIN   \n",
+       "    ID    S    P  P_S                FORM               LEMMA   GPOS  \\\n",
+       "0  1.0  1.0  1.0  0.0            Brasília            Brasília   PROP   \n",
+       "1  2.0  1.0  1.0  0.0  Pesquisa_Datafolha  Pesquisa_Datafolha      N   \n",
+       "2  3.0  1.0  1.0  0.0           publicada            publicar  V-PCP   \n",
+       "3  4.0  1.0  1.0  0.0                hoje                hoje    ADV   \n",
+       "4  5.0  1.0  1.0  0.0              revela             revelar  V-FIN   \n",
        "\n",
-       "            MORF  DTREE  FUNC ... GPOS_18 GPOS_19 GPOS_20 GPOS_21  \\\n",
-       "INDEX                         ...                                   \n",
-       "0            F|S      5  ADVL ...     NaN     NaN     NaN     NaN   \n",
-       "1            F|S      5  SUBJ ...     NaN     NaN     NaN     NaN   \n",
-       "2            F|S      2    N< ...     NaN     NaN     NaN     NaN   \n",
-       "3              -      3  ADVL ...     NaN     NaN     NaN     NaN   \n",
-       "4      PR|3S|IND      0   STA ...     NaN     NaN     NaN     NaN   \n",
+       "        MORF  DTREE  FUNC ... GPOS_18 GPOS_19 GPOS_20 GPOS_21 GPOS_CHILD_1  \\\n",
+       "0        F|S    5.0  ADVL ...     NaN     NaN     NaN     NaN          NaN   \n",
+       "1        F|S    5.0  SUBJ ...     NaN     NaN     NaN     NaN        V-PCP   \n",
+       "2        F|S    2.0    N< ...     NaN     NaN     NaN     NaN          ADV   \n",
+       "3          -    3.0  ADVL ...     NaN     NaN     NaN     NaN          NaN   \n",
+       "4  PR|3S|IND    0.0   STA ...     NaN     NaN     NaN     NaN         PROP   \n",
        "\n",
-       "      GPOS_CHILD_1 GPOS_CHILD_2 GPOS_CHILD_3 GPOS_GRAND_PARENT GPOS_PARENT   Y  \n",
-       "INDEX                                                                           \n",
-       "0              NaN          NaN          NaN               NaN       V-FIN   -  \n",
-       "1            V-PCP          NaN          NaN               NaN       V-FIN  A0  \n",
-       "2              ADV          NaN          NaN             V-FIN           N   -  \n",
-       "3              NaN          NaN          NaN                 N       V-PCP   -  \n",
-       "4             PROP            N            N               NaN         NaN   -  \n",
+       "  GPOS_CHILD_2 GPOS_CHILD_3 GPOS_GRAND_PARENT GPOS_PARENT   Y  \n",
+       "0          NaN          NaN               NaN       V-FIN   -  \n",
+       "1          NaN          NaN               NaN       V-FIN  A0  \n",
+       "2          NaN          NaN             V-FIN           N   -  \n",
+       "3          NaN          NaN                 N       V-PCP   -  \n",
+       "4            N            N               NaN         NaN   -  \n",
        "\n",
        "[5 rows x 164 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,26 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching word2vec...\n",
-      "Fetching word2vec... done\n",
-      "Fetching corpus-word-missing-pers.txt...\n",
-      "Fetching corpus-word-missing-pers.txt...done\n",
-      "Fetching corpus-word-missing-locs.txt...\n",
-      "Fetching corpus-word-missing-locs.txt...done\n",
-      "Fetching corpus-word-missing-orgs.txt...\n",
-      "Fetching corpus-word-missing-orgs.txt...done\n",
-      "Preprocess finished. Found 14275 of 14908 words, missing 4.25%\n",
-      "# UNIQUE TOKENIZED 14908, # EMBEDDED TOKENS 12038\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dbname = 'svm_glo50'\n",
     "path_svm = BINARIES_DIR + dbname + '.pickle'\n",
@@ -442,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -482,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -597,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -606,7 +562,7 @@
     "for ds_type in ('train', 'test', 'valid'):            \n",
     "    # saves the processed data\n",
     "    svm_path = '{:}/{:}/{:}.svm'.format(SVM_DIR, 'hot', ds_type)\n",
-    "    ex = to_svm(ds_type, propbank_encoder, columns, target_column='T')\n",
+    "    ex = to_svm(ds_type, propbank_encoder, columns, target_column='Y')\n",
     "    with open(svm_path, mode='w') as f:\n",
     "        for t in ex:\n",
     "            f.write(ex[t] + '\\n')"
@@ -614,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +605,6 @@
        "      <th>DTREE</th>\n",
        "      <th>FUNC</th>\n",
        "      <th>...</th>\n",
-       "      <th>GPOS_17</th>\n",
        "      <th>GPOS_18</th>\n",
        "      <th>GPOS_19</th>\n",
        "      <th>GPOS_20</th>\n",
@@ -659,20 +614,21 @@
        "      <th>GPOS_CHILD_3</th>\n",
        "      <th>GPOS_GRAND_PARENT</th>\n",
        "      <th>GPOS_PARENT</th>\n",
+       "      <th>Y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>Brasília</td>\n",
        "      <td>Brasília</td>\n",
        "      <td>PROP</td>\n",
        "      <td>F|S</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>ADVL</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -683,28 +639,28 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>V-FIN</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 163 columns</p>\n",
+       "<p>1 rows × 164 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID  S  P  P_S      FORM     LEMMA  GPOS MORF  DTREE  FUNC     ...      \\\n",
-       "0   1  1  1    0  Brasília  Brasília  PROP  F|S      5  ADVL     ...       \n",
+       "    ID    S    P  P_S      FORM     LEMMA  GPOS MORF  DTREE  FUNC ... GPOS_18  \\\n",
+       "0  1.0  1.0  1.0  0.0  Brasília  Brasília  PROP  F|S    5.0  ADVL ...     NaN   \n",
        "\n",
-       "  GPOS_17 GPOS_18 GPOS_19 GPOS_20 GPOS_21 GPOS_CHILD_1 GPOS_CHILD_2  \\\n",
-       "0     NaN     NaN     NaN     NaN     NaN          NaN          NaN   \n",
+       "  GPOS_19 GPOS_20 GPOS_21 GPOS_CHILD_1 GPOS_CHILD_2 GPOS_CHILD_3  \\\n",
+       "0     NaN     NaN     NaN          NaN          NaN          NaN   \n",
        "\n",
-       "  GPOS_CHILD_3 GPOS_GRAND_PARENT GPOS_PARENT  \n",
-       "0          NaN               NaN       V-FIN  \n",
+       "  GPOS_GRAND_PARENT GPOS_PARENT  Y  \n",
+       "0               NaN       V-FIN  -  \n",
        "\n",
-       "[1 rows x 163 columns]"
+       "[1 rows x 164 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
