notebooks: 07-evaluations_consolidate.ipynb

--- a/notebooks/07-evaluations_consolidate.ipynb
+++ b/notebooks/07-evaluations_consolidate.ipynb
@@ -13,22 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('datasets')\n",
+    "sys.path.append('models')\n",
+    "\n",
     "import os \n",
     "#helps speedup file io\n",
     "import pandas as pd\n",
     "from collections import defaultdict\n",
     "\n",
     "# custom models that allow evaluation\n",
-    "from models.evaluator_conll import EvaluatorConll # Runs conll official script under the hood\n",
+    "from evaluator_conll import EvaluatorConll # Runs conll official script under the hood\n",
     "# from models.propbank import Propbank # Propbank class that acts as a wrapper to binaries\n",
-    "from models.propbank_encoder import PropbankEncoder\n",
-    "from models.propbank_mappers import MapperT2ARG, MapperIDX2CAT\n"
+    "from propbank_encoder import PropbankEncoder\n",
+    "from propbank_mappers import MapperT2ARG, MapperIDX2CAT\n"
    ]
   },
   {
@@ -39,16 +41,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 For deep learning models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "propbank = PropbankEncoder.recover('datasets/binaries/deep_glo50.pickle')\n",
-    "mapper_t2arg = MapperT2ARG(propbank)\n",
-    "mapper_idx2cat = MapperIDX2CAT(propbank)\n",
+    "# mapper_t2arg = MapperT2ARG(propbank)\n",
+    "# mapper_idx2cat = MapperIDX2CAT(propbank)\n",
     "\n",
     "train_evaluator = EvaluatorConll('train', \n",
     "        propbank.column('train', 'S', 'CAT'),\n",
@@ -68,12 +77,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.2 For classic models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "propbank = PropbankEncoder.recover('datasets/binaries/svm_glo50.pickle')\n",
+    "mapper_t2arg = MapperT2ARG(propbank)\n",
+    "mapper_idx2cat = MapperIDX2CAT(propbank)\n",
+    "\n",
+    "train_svm_evaluator = EvaluatorConll('train', \n",
+    "        propbank.column('train', 'S', 'CAT'),\n",
+    "        propbank.column('train', 'P', 'CAT'),\n",
+    "        propbank.column('train', 'PRED', 'CAT'),\n",
+    "        propbank.column('train', 'Y', 'CAT')\n",
+    ")\n",
+    "valid_svm_evaluator = EvaluatorConll('valid', \n",
+    "        propbank.column('valid', 'S', 'CAT'),\n",
+    "        propbank.column('valid', 'P', 'CAT'),\n",
+    "        propbank.column('valid', 'PRED', 'CAT'),\n",
+    "        propbank.column('valid', 'Y', 'CAT')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'-': 0, 'A0': 1, 'A1': 2, 'A2': 3, 'A3': 4, 'A4': 5, 'A5': 6, 'AM-ADV': 7, 'AM-CAU': 8, 'AM-DIR': 9, 'AM-DIS': 10, 'AM-EXT': 11, 'AM-LOC': 12, 'AM-MED': 13, 'AM-MNR': 14, 'AM-NEG': 15, 'AM-PNC': 16, 'AM-PRD': 17, 'AM-REC': 18, 'AM-TMP': 19, 'C-A0': 20, 'C-A1': 21, 'C-A2': 22, 'C-A3': 23, 'C-AM-ADV': 24, 'C-AM-DIS': 25, 'C-AM-EXT': 26, 'C-AM-LOC': 27, 'C-AM-MNR': 28, 'C-AM-NEG': 29, 'C-AM-PNC': 30, 'C-AM-PRD': 31, 'C-AM-TMP': 32}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(propbank.lex2idx['Y'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Iterates outputs dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -136,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -169,59 +226,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Python 3.6.3 |Anaconda custom (64-bit)| (default, Oct  6 2017, 12:04:38) \n",
+      "[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin\n",
+      "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
+      "(InteractiveConsole)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "svm: 24.76 25.29\n",
-      "svm: 99.45 99.42\n",
-      "svm: 2.05 1.83\n",
-      "svm: 0.96 0.63\n",
-      "svm: 0.13 0.33\n",
-      "svm: 99.45 99.62\n",
-      "svm: 26.05 26.45\n",
-      "svm: 24.56 24.88\n",
-      "svm: 2.87 2.38\n",
-      "svm: 1.0 0.67\n",
-      "svm: 0.1 0.14\n",
-      "svm: 99.42 99.54\n",
-      "svm: 5.81 2.47\n",
-      "svm: 2.3 0.82\n",
-      "svm: 0.01 0.13\n",
-      "svm: 99.31 99.46\n",
-      "svm: 5.82 2.51\n",
-      "svm: 2.3 0.82\n",
-      "svm: 0.01 0.13\n",
-      "svm: 2.36 0.71\n",
-      "svm: 2.36 0.71\n",
-      "svm: 1.48 1.16\n",
-      "svm: 2.81 0.77\n",
-      "svm: 99.19 99.08\n",
-      "svm: 4.71 2.43\n",
-      "svm: 1.71 0.86\n",
-      "svm: 0.03 0.13\n",
-      "svm: 24.77 25.3\n",
-      "svm: 99.45 99.62\n",
-      "svm: 3.22 2.06\n",
-      "svm: 1.05 0.84\n",
-      "svm: 0.11 0.18\n",
-      "svm: 24.77 25.3\n",
-      "svm: 99.19 99.04\n",
-      "svm: 5.41 2.59\n",
-      "svm: 2.11 0.89\n",
-      "svm: 0.02 0.13\n",
-      "svm: 25.72 25.95\n",
-      "svm: 99.45 99.62\n",
-      "svm: 3.21 2.06\n",
-      "svm: 1.07 0.84\n",
-      "svm: 0.1 0.18\n",
-      "svm: 2.81 0.81\n",
-      "svm: 2.66 1.02\n",
-      "svm: 2.81 0.67\n",
-      "svm: 2.7 0.78\n"
+      "In :  Y = mapper.define(d, target_column).map()\n"
+     ]
+    },
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<console>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<console>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Y = mapper.define(d, target_column).map()\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In : Y = mapper.define(d, target_column).map()\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "35",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m~/anaconda/envs/tensorflow/lib/python3.6/code.py\u001b[0m in \u001b[0;36mruncode\u001b[0;34m(self, code)\u001b[0m\n\u001b[1;32m     89\u001b[0m         \"\"\"\n\u001b[1;32m     90\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 91\u001b[0;31m             \u001b[0mexec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlocals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mSystemExit\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m             \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/wrk/py/gv/deep_srlbr/models/evaluator_conll.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/wrk/py/gv/deep_srlbr/models/propbank_mappers.py\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    288\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    289\u001b[0m         return [self.idx2lex[self.column][int(val)]\n\u001b[0;32m--> 290\u001b[0;31m                 for _, val in self.d.items()]\n\u001b[0m\u001b[1;32m    291\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    292\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/wrk/py/gv/deep_srlbr/models/propbank_mappers.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    288\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    289\u001b[0m         return [self.idx2lex[self.column][int(val)]\n\u001b[0;32m--> 290\u001b[0;31m                 for _, val in self.d.items()]\n\u001b[0m\u001b[1;32m    291\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    292\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 35"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
@@ -254,12 +313,13 @@
     "        elif 'svm' in thisdir and (('train.pickle' in thisfiles) or ('valid.pickle' in thisfiles)):\n",
     "            if ('train.pickle' in thisfiles):                \n",
     "                filepath = '{:}/train.pickle'.format(thisdir)\n",
-    "                train_evaluator.evaluate_fromliblinear(filepath, mapper_t2arg)\n",
+    "                train_svm_evaluator.evaluate_fromliblinear(filepath, mapper_idx2cat)\n",
     "                    \n",
     "                \n",
     "            if ('valid.pickle' in thisfiles):                \n",
     "                filepath = '{:}/valid.pickle'.format(thisdir)\n",
-    "                valid_evaluator.evaluate_fromliblinear(filepath, mapper_t2arg)\n",
+    "                valid_svm_evaluator.evaluate_fromliblinear(filepath, mapper_idx2cat)\n",
+    "                \n",
     "            print('svm:', train_evaluator.f1, valid_evaluator.f1)\n",
     "# #             svm_d.update(svm_leader_board(thisdir,valid_evaluator.f1, train_evaluator.f1))\n",
     "            "
